fix portfolio header pos. on mobile; begin to redo bio section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,24 +74,25 @@ body {
     position: absolute !important;
     left: 25.2vw !important;
     bottom: -20px !important;
-	border: solid 1px white;
-	border-radius: 5px 5px 0 0;
+	border-left: solid 2px white;
+	border-top: solid 2px white;
+	border-radius: 5px 0 0 0;
 	background-color: #FFB400;
 	z-index: 2;
 	/* box-shadow: 2px 2px 20px #333333; */
 }
 
 #bio {
-	height: 200px;
+	height: 212px;
 	position: absolute !important;
 	left: calc(25.2vw + 214px) !important;
     right: 25.2vw !important;
 	bottom: -12px !important;
-	border: solid 1px white;
+	border: solid 2px white;
 	border-radius: 0 5px 0 0;
-	background-color: #ffa000;
+	background-color: #ff8f00;
 	padding: 10px 10px 10px 20px;
-	z-index: 0;
+	z-index: 1;
 	font-size: 16pt;
 	line-height: 18pt;
 }
@@ -108,7 +109,7 @@ body {
 #nav_dummy {
 	position: relative !important;
 	top: 100%;
-	outline: 1px solid white;
+	outline: 2px solid white;
 	z-index: 0 !important;
 }
 
@@ -309,9 +310,9 @@ body {
 		font-size: 10pt;
 	}
 
-	#portfolio {
+	/* #portfolio {
 		height: 100%;
-	}
+	} */
 	
 	#portfolio_header {
 		font-size: 26pt;
